Project key_keeper {
  database_type: 'PostgreSQL'
  Note: '''
    # Key Keeper Database
  '''
}

Table users as U {
  id bigserial [pk]
  full_name varchar [not null]
  hashed_password varchar [not null]
  email varchar [unique, not null]
  profile_image_url varchar
  password_changed_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]
  is_active boolean [not null, default: false]
  is_email_verified boolean [not null, default: false]
}

Table sessions {
  id uuid [pk]
  user_id bigint [ref: > U.id, not null]
  token varchar [not null]
  scope varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}

Table reminders {
  id bigserial [pk]
  user_id bigint [ref: > U.id, not null]
  website_url varchar [not null]
  interval bigint [not null]
  updated_at timestamptz [not null, default: `now()`]
  extension jsonb

  Indexes {
    (user_id, website_url)
  }
}